# job-talent-matching-engine

./: README.md  pyproject.toml
data/: model.joblib
notebooks/: data_exploration.ipynb  training.ipynb
src/: __main__.py  constants.py
src/core/: model.py  search.py
src/utils/: features_extraction.py
